Fixed sendign large json message issue
Complete basic of syncing new folders

Signed-off-by: Kasun <kasun.ranasinghe@icloud.com>